--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "build": "npm run build:client",
-    "build:client": "cd client && npm run build",
+    "build:client": "cd client && npm install && npm run build",
     "postinstall": "cd client && npm install",
     "vercel-build": "npm run build:client",
-    "deploy": "npm run build && npm start"
+    "deploy": "npm run build && npm start",
+    "railway-build": "npm install && cd client && npm install && npm run build"
   },
   "dependencies": {
     "express": "^4.18.2",
