--- a/render.yaml
+++ b/render.yaml
@@ -6,6 +6,7 @@ services:
     buildCommand: npm install && cd client && npm install && npm run build
     startCommand: npm start
     healthCheckPath: /api/health
+    rootDir: .
     envVars:
       - key: NODE_ENV
         value: production
